@@ -5,6 +5,7 @@ owncloud-news (1.401)
 * Add an option route for the API which handles the CORS headers to allow webapplications to access the API
 * Also allow youtube and vimeo embeds that start with // and https:// instead of only allowing http
 * ownCloud 6 compability fixes
+* Throw proper error codes when creating invalid folders through the API
 
 owncloud-news (1.206)
 * Also handle URLErrors in updater script that are thrown when the domain of a feed is not found
